# golden-path-strands

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  QUICKSTART.md  README.md  config.yaml  pyproject.toml  requirements.txt  setup.sh  start.py
.github/workflows/: ci.yml
docs/: visual-concepts.html
examples/: coding_agent.py  quick_start.py  research_agent.py  strands_integration.py
src/golden_path/: __init__.py  core.py  evaluation.py  exploration.py
src/golden_path_strands/: __init__.py  agent_orchestrator.py  config.py  core.py  dataset.py  evaluation.py  jsonl_stream_writer.py  logging.py  monitoring.py  ollama_provider.py  process_miner.py  strands_telemetry.py  training.py
tests/: test_core.py  test_evaluation.py  test_logging.py
